--- a/service/service_vod/src/main/resources/application.properties
+++ b/service/service_vod/src/main/resources/application.properties
@@ -18,6 +18,8 @@ spring.jackson.time-zone=GMT+8
 
 #mybatis日志
 mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
+#使Maven正常加载xml文件
+mybatis-plus.mapper-locations=classpath:com/atguigu/ggkt/vod/mapper/xml/*.xml
 
 #文件上传相关配置
 spring.servlet.multipart.max-file-size=1024MB
