config nacos address

--- a/service/service_vod/src/main/resources/application.properties
+++ b/service/service_vod/src/main/resources/application.properties
@@ -30,3 +30,6 @@ tencent.cos.file.secretid=AKIDkLigPwEGB4lFVYOEwYzPFvWxFWhlfqxv
 tencent.cos.file.secretkey=pSr68wWt6Ql16SkqhHbfS1QeJn8MRK0S
 #bucket可以在控制台创建，也可以使用java代码创建
 tencent.cos.file.bucketname=2022-atghuihu-1314433941
+
+# nacos服务地址
+spring.cloud.nacos.discovery.server-addr=127.0.0.1:8848
