--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
         <module>service_vod</module>
         <module>common</module>
         <module>service_utils</module>
+        <module>service_gateway</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
