--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
         <module>common</module>
         <module>service_utils</module>
         <module>service_gateway</module>
+        <module>service/service_order</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
