--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
         <module>service_utils</module>
         <module>service_gateway</module>
         <module>service/service_order</module>
+        <module>service_activity</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
