--- a/service/pom.xml
+++ b/service/pom.xml
@@ -12,6 +12,7 @@
     <modules>
         <module>service_vod</module>
         <module>service_order</module>
+        <module>service_activity</module>
     </modules>
 
     <dependencies>
