add service_user model

--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <module>service_gateway</module>
         <module>service/service_order</module>
         <module>service_activity</module>
+        <module>service_user</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
