--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,8 @@
         <module>service/service_order</module>
         <module>service_activity</module>
         <module>service_user</module>
+        <module>service_client</module>
+        <module>service_client/service_user_client</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
