--- a/service_gateway/src/main/resources/application.properties
+++ b/service_gateway/src/main/resources/application.properties
@@ -32,7 +32,7 @@ spring.cloud.gateway.routes[2].id=service-activity
 #设置路由的uri
 spring.cloud.gateway.routes[2].uri=lb://service-order
 #设置路由断言,代理servicerId为auth-service的/auth/路径
-spring.cloud.gateway.routes[2].predicates= Path=/*/order/**
+spring.cloud.gateway.routes[2].predicates= Path=/*/activity/**
 
 #service-user模块配置
 #设置路由id
