--- a/service/service_activity/src/main/resources/application.properties
+++ b/service/service_activity/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.profiles.active=dev
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/glkt_activity?characterEncoding=utf-8&useSSL=false
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=whh1999
 
 #返回json的全局时间格式
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
