--- a/service/pom.xml
+++ b/service/pom.xml
@@ -14,6 +14,7 @@
         <module>service_order</module>
         <module>service_activity</module>
         <module>service_user</module>
+        <module>service_wechat</module>
     </modules>
 
     <dependencies>
