--- a/service_client/pom.xml
+++ b/service_client/pom.xml
@@ -12,6 +12,7 @@
     <packaging>pom</packaging>
     <modules>
         <module>service_user_client</module>
+        <module>service_course_client</module>
     </modules>
 
     <dependencies>
