--- a/service/service_user/src/main/resources/application.properties
+++ b/service/service_user/src/main/resources/application.properties
@@ -21,3 +21,11 @@ mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
 
 # nacos服务地址
 spring.cloud.nacos.discovery.server-addr=127.0.0.1:8848
+
+#公众号id和秘钥
+# 硅谷课堂微信公众平台appId
+wechat.mpAppId: wx03a3426d57ed90c6
+## 硅谷课堂微信公众平台api秘钥
+wechat.mpAppSecret: e53047b9aa8966e579f4b497b09e37de
+# 授权回调获取用户信息接口地址
+wechat.userInfoUrl: http://wanghanhan1999.viphk.91tunnel.com/api/user/wechat/userInfo
