video on demand

--- a/service/service_vod/src/main/resources/application.properties
+++ b/service/service_vod/src/main/resources/application.properties
@@ -33,3 +33,6 @@ tencent.cos.file.bucketname=2022-atghuihu-1314433941
 
 # nacos服务地址
 spring.cloud.nacos.discovery.server-addr=127.0.0.1:8848
+
+#腾讯云视频点播模块地址
+tencent.video.appid=1312624373
