--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <module>service_client</module>
         <module>service_client/service_user_client</module>
         <module>service/service_wechat</module>
+        <module>service_client/service_activity_client</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
