create video-on-demand order

--- a/service/service_order/pom.xml
+++ b/service/service_order/pom.xml
@@ -12,6 +12,22 @@
     <artifactId>service_order</artifactId>
     <dependencies>
 
+        <dependency>
+            <groupId>com.atguigu</groupId>
+            <artifactId>service_course_client</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.atguigu</groupId>
+            <artifactId>service_user_client</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.atguigu</groupId>
+            <artifactId>service_activity_client</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+
     </dependencies>
 
 
