--- a/service/service_order/pom.xml
+++ b/service/service_order/pom.xml
@@ -27,6 +27,11 @@
             <artifactId>service_activity_client</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>com.github.wxpay</groupId>
+            <artifactId>wxpay-sdk</artifactId>
+            <version>0.0.3</version>
+        </dependency>
 
     </dependencies>
 
