--- a/service/service_live/pom.xml
+++ b/service/service_live/pom.xml
@@ -27,6 +27,11 @@
             <artifactId>service_course_client</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+            <optional>true</optional>
+        </dependency>
     </dependencies>
 
     <artifactId>service_live</artifactId>
